--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "request": "^2.88.2"
+    "firebase-admin": "^11.7.0",
+    "request-promise-native": "^1.0.9"
   }
 }
