--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Tommaso Moro",
   "license": "ISC",
   "dependencies": {
+    "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase-admin": "^11.7.0",
-    "request-promise-native": "^1.0.9"
+    "request-promise-native": "^1.0.9",
+    "socket.io": "^4.6.1"
   }
 }
