--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "firebase-admin": "^11.8.0",
+    "helmet": "^7.0.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
     "socket.io": "^4.6.1"
